--- a/carouselstyle.css
+++ b/carouselstyle.css
@@ -10,7 +10,7 @@
 }
 .chapter-NAV img{
   width: 100%;
-  height: 8vw;
+  height: 65px;
   object-fit: contain;
   object-position: center;
 
@@ -120,7 +120,7 @@
 }
 .chapter-SSF img{
   width: 100%;
-  height: 33vw;
+  height: 625px;
   object-fit: contain;
   object-position: center;
 }
@@ -152,7 +152,7 @@
 }
 .chapter-terrain img{
   width: 100%;
-  height: 25vw;
+  height: 500px;
   object-fit: contain;
   object-position: center;
 }
@@ -184,7 +184,7 @@
 }
 .chapter-vk img{
   width: 100%;
-  height: 30vw;
+  height: 540px;
   object-fit: contain;
   object-position: center;
 }
