--- a/css/banner.css
+++ b/css/banner.css
@@ -52,12 +52,13 @@ h1, p, h3{
   left: 50%;
   transform: translatex(-50%);
   cursor: pointer;
-
+  background-color: rgb(245, 222, 179);
+  padding: 10px 10px 10px;
+  border-radius: 30px;
 }
 .showreel img{
-  filter: brightness(0) saturate(100%) invert(93%) sepia(96%) saturate(365%) hue-rotate(313deg) brightness(99%) contrast(94%);
+  filter: brightness(0) ;
   animation-name: stretch;
-  padding-bottom: 10px;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
   animation-direction: reverse;
@@ -65,12 +66,15 @@ h1, p, h3{
   animation-play-state: running;
 }
 .banner h3{
-  font-size: 22px;
-  font-weight: 800;
-  letter-spacing: .5vw;
+  font-size: 18px;
+  font-weight:500;
+  letter-spacing: .14vw;
   text-align: center;
- 
-  
+  color: black;
+  font-family: 'Epilogue';
+  position: relative;
+  padding-top: 4px;
+  padding-right: 2px;
 }
 
 
@@ -80,11 +84,11 @@ h1, p, h3{
     opacity: .5;
   }
   30% {
-    scale:1.4;
+    scale:1.2;
     opacity: 1;
   }
   70% {
-    scale:1.2;
+    scale:1.1;
     opacity: 1;
   }
   100% {
@@ -113,3 +117,95 @@ padding: 5px;
   }
 
 
+
+
+
+
+.sub-banner{
+  width: 100%;
+  --height: 55px;
+  height: var(--height);
+  background-color: rgba(12, 12, 12, 0.9);
+  position: fixed;
+  z-index: 203;
+  overflow: hidden;
+  display: flex;
+  transition: .25s;
+}
+.sub-banner:hover{
+  background-color: rgba(12, 12, 12, 1);
+  transition: .25s;
+}
+
+.name{
+  height: auto;
+  width: 25%;
+  display: flex;
+  align-items: center;
+ 
+} 
+  .name p{
+    font-size: 1rem;
+    text-align: left;
+    position: relative;
+    left: 12.5%;
+  }
+.categories p{
+  width: 100%;
+  padding-top: calc(var(--height)/2);
+  margin-top: -4px;
+  font-size: .7rem;
+  letter-spacing: 1px;
+  text-align: center;
+  transition: .1s;
+}
+.categories{
+  height: auto;
+  width: 50%;
+
+}
+.categories .owl-carousel{
+  width: 100%;
+  height: 100%;
+  
+}
+.categories p:hover{
+  scale: 1.05;
+  opacity: .8;
+  transform: translateY(-2%);
+  transition: .3s;
+}
+
+  .categories .owl-theme .owl-nav{
+    filter: brightness(0) saturate(100%) invert(93%) sepia(96%) saturate(365%) hue-rotate(313deg) brightness(99%) contrast(94%);
+  
+  }
+  .categories .owl-theme .owl-nav [class*='owl-'] {
+    background: none;
+    opacity: .6;
+    border-radius: 50%;
+    box-shadow: 0px 0px 16px -4px purple;
+}
+    .categories .owl-theme .owl-nav [class*='owl-']:hover {
+      background: rgba(255, 255, 255, 0.425);
+      opacity: 1;
+ }
+
+
+
+
+
+
+
+
+
+
+
+  .sub-banner .logo__grid img{
+    height: 30px;
+  }
+  .sub-banner a:link{
+    text-decoration: none;
+  }
+  
+  
